--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                         <tr>
                             <td id="3">Kjiel XIII</td>
                             <td></td>
-                            <td id="4">Chiarini</td>
+                            <td id="4">Chiarini 330</td>
                             <td></td>
                         </tr>
                         <tr>
                             <td id="5">Muskyo</td>
                             <td></td>
-                            <td id="6">Angelini</td>
+                            <td id="6">Angelini Curva Volpi</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -66,7 +66,7 @@
             </div>
             <div class="col-sm-6">
                <img src="img/soccer2.png" class="img-fluid" alt="Responsive image"/> 
-               
+               <p>Fatti, nomi, cose o coltellate sono puramente casuali.</p>
             </div>
         </div>
                 <script>
@@ -286,7 +286,7 @@
                                     }
                                     var g1 = document.getElementById(gr1).innerHTML;
                                     var g2 = document.getElementById(gr2).innerHTML;
-                                    telecronaca.innerHTML ='<b>' + g1 + '</b> incita la folla mentre <b>' + g2 + '</b> lo prende in giro';
+                                    telecronaca.innerHTML ='<b>' + g1 + '</b> incita la folla mentre <b>' + g2 + '</b> lo prende deride';
                                     break;
 
                                 default:
@@ -321,9 +321,9 @@
 
                             } else {
                                 if (goal1 > goal2) {
-                                    telecronaca.innerHTML = 'Partita Terminata, vince <b>PESCARA VECCHIA</B> con ben ' + goal1 + ' a ' + goal2;
+                                    telecronaca.innerHTML = 'Partita Terminata, vince <b>PESCARA VECCHIA</B> con ben ' + goal1 + 'reti a ' + goal2;
                                 } else if (goal2 > goal1) {
-                                    telecronaca.innerHTML = 'Partita Terminata, vince <b>MAI DOMI KIETI</B> con ben ' + goal2 + ' a ' + goal1;
+                                    telecronaca.innerHTML = 'Partita Terminata, vince <b>MAI DOMI KIETI</B> con ben ' + goal2 + 'reti a ' + goal1;
                                 } else { telecronaca.innerHTML = 'Partita Terminata, pareggio tra <b>PESCARA VECCHIA</b> e <b>MAI DOMI KIETI</b>'; }
 
                                 
