--- a/index.html
+++ b/index.html
@@ -18,36 +18,36 @@
                 <table class="table">
                     <thead>
                         <tr>
-                            <th><strong>PESCARA VIOLENTA</strong></th>
+                            <th><strong>PESCARA VECCHIA</strong></th>
                             <th id="Goal1">0</th>
-                            <th><strong>MAI DOMI KIETI</strong></th>
+                            <th><strong>TEATE FC</strong></th>
                             <th id="Goal2">0</th>
                         </tr>
                     </thead>
                     <tbody id="tabella">
                         <tr>
                             <td id="1">Ciacone</td>
-                            <td></td>
-                            <td id="2">Valignani il Cinese</td>
-                            <td></td>
+                            <td id="s1"></td>
+                            <td id="2">Valignani</td>
+                            <td id="s2"></td>
                         </tr>
                         <tr>
                             <td id="3">Kjiel XIII</td>
-                            <td></td>
-                            <td id="4">Chiarini 330</td>
-                            <td></td>
+                            <td id="s3"></td>
+                            <td id="4">Chiarini il mai domo</td>
+                            <td id="s4"></td>
                         </tr>
                         <tr>
                             <td id="5">Muskyo</td>
-                            <td></td>
+                            <td id="s5"></td>
                             <td id="6">Angelini Curva Volpi</td>
-                            <td></td>
+                            <td id="s5"></td>
                         </tr>
                         <tr>
                             <td id="7">Sergio detto il Porco</td>
-                            <td></td>
+                            <td id="s7"></td>
                             <td id="8">Marcello il Paninaro</td>
-                            <td></td>
+                            <td id="s8"></td>
                         </tr>
                         <tr>
                             <td id="P1">Nicola L. Conti</td>
@@ -57,8 +57,10 @@
                         </tr>
                     </tbody>
                 </table>
+                
                 <div>
                     <p>MINUTO: <strong id="counter"></strong></p>
+                    <hr />
                     <p id="telecronaca">
                     </p>
                 </div>
@@ -71,7 +73,7 @@
         </div>
                 <script>
                     const giocatori = 8;
-                    const eventi = 10;
+                    const eventi = 14;
 
                     const gz1 = document.getElementById('Goal1');
                     const gz2 = document.getElementById('Goal2');
@@ -86,6 +88,7 @@
                         var telecronaca = document.getElementById('telecronaca');
                         var goal1 = 0;
                         var goal2 = 0;
+                        
                         //funzione per aggiornare il numero e impostare il timeout per il prossimo aggiornamento
                         function updateCounter() {
                             output.innerHTML = counter;//scrittura del valore corrente sul tag manipolato
@@ -211,7 +214,7 @@
                                     } else {
                                     }
                                     if (gr2 % 2 === 0) {
-                                    } else {
+                                    } else { 
                                         gr2 = gr2 + 1;
                                     }
                                     if (gr2 == 0) {
@@ -270,7 +273,7 @@
                                     var g2 = document.getElementById(gr2).innerHTML;
                                     telecronaca.innerHTML ='<b>'+ g2 + '</b> in evidente difficoltà viene buttato giù da <b>' + g1 + '</b> senza troppi complimenti';
                                     break;
-                                case 8:
+                                case 9:
                                     var gr1 = Math.trunc(giocatori * Math.random());
                                     var gr2 = Math.trunc(giocatori * Math.random());
                                     if (gr1 % 2 === 0) {
@@ -291,7 +294,90 @@
                                     var g2 = document.getElementById(gr2).innerHTML;
                                     telecronaca.innerHTML ='<b>' + g1 + '</b> incita la folla mentre <b>' + g2 + '</b> lo prende deride';
                                     break;
-
+                                case 10:
+                                    var gr1 = Math.trunc(giocatori * Math.random());
+                                    var gr2 = Math.trunc(giocatori * Math.random());
+                                    if (gr1 % 2 === 0) {
+                                        gr1 = gr1 + 1;
+                                    } else {
+                                    }
+                                    if (gr2 % 2 === 0) {
+                                    } else {
+                                        gr2 = gr2 + 1;
+                                    }
+                                    if (gr2 == 0) {
+                                        gr2 = 2;
+                                    }
+                                    if (gr1 == 9) {
+                                        gr1 = 1;
+                                    }
+                                    var g1 = document.getElementById(gr1).innerHTML;
+                                    var g2 = document.getElementById(gr2).innerHTML;
+                                    telecronaca.innerHTML = '<b>' + g1 + '</b> trova un distratto <b>' + g2 + '</b> che viene colpito alle spalle cadendo rovinosamente';
+                                    break;
+                                case 11:
+                                    var gr1 = Math.trunc(giocatori * Math.random());
+                                    var gr2 = Math.trunc(giocatori * Math.random());
+                                    if (gr1 % 2 === 0) {
+                                        gr1 = gr1 + 1;
+                                    } else {
+                                    }
+                                    if (gr2 % 2 === 0) {
+                                    } else {
+                                        gr2 = gr2 + 1;
+                                    }
+                                    if (gr2 == 0) {
+                                        gr2 = 2;
+                                    }
+                                    if (gr1 == 9) {
+                                        gr1 = 1;
+                                    }
+                                    var g1 = document.getElementById(gr1).innerHTML;
+                                    var g2 = document.getElementById(gr2).innerHTML;
+                                    telecronaca.innerHTML = '<b>' + g2 + '</b> in evidente difficoltà viene buttato giù da <b>' + g1 + '</b> senza troppi complimenti';
+                                    break;
+                                case 12:
+                                    var gr1 = Math.trunc(giocatori * Math.random());
+                                    var gr2 = Math.trunc(giocatori * Math.random());
+                                    if (gr1 % 2 === 0) {
+                                        gr1 = gr1 + 1;
+                                    } else {
+                                    }
+                                    if (gr2 % 2 === 0) {
+                                    } else {
+                                        gr2 = gr2 + 1;
+                                    }
+                                    if (gr2 == 0) {
+                                        gr2 = 2;
+                                    }
+                                    if (gr1 == 9) {
+                                        gr1 = 1;
+                                    }
+                                    var g1 = document.getElementById(gr1).innerHTML;
+                                    var g2 = document.getElementById(gr2).innerHTML;
+                                    telecronaca.innerHTML = '<b>' + g1 + '</b> scivola con la gamba tesa colpendo un malcapitato <b>' + g2 + '</b>';
+                                    break;
+                                case 13:
+                                    var gr1 = Math.trunc(giocatori * Math.random());
+                                    var gr2 = Math.trunc(giocatori * Math.random());
+                                    if (gr1 % 2 === 0) {
+                                        gr1 = gr1 + 1;
+                                    } else {
+                                    }
+                                    if (gr2 % 2 === 0) {
+                                    } else {
+                                        gr2 = gr2 + 1;
+                                    }
+                                    if (gr2 == 0) {
+                                        gr2 = 2;
+                                    }
+                                    if (gr1 == 9) {
+                                        gr1 = 1;
+                                    }
+                                    var g1 = document.getElementById(gr1).innerHTML;
+                                    var g2 = document.getElementById(gr2).innerHTML;
+                                    telecronaca.innerHTML = '<b>' + g2 + '</b> spintona <b>' + g1 + '</b> che cade in malo modo';
+                                    break;
                                 default:
                                     var gr1 = Math.trunc(giocatori * Math.random());
                                     var gr2 = Math.trunc(giocatori * Math.random());
@@ -319,7 +405,7 @@
 
 
                             if (counter <= 60) {
-                                setTimeout(updateCounter, 2500);
+                                setTimeout(updateCounter, 2200);
 
 
                             } else {
