--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>INTERNATIONAL KNIFE & SOCCER 2087</title>
+    <title>STRONG & KIND FOOTBALL MANAGER</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <meta name='viewport' content='width=device-width, initial-scale=1' />
@@ -11,48 +11,48 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="mt-5 mb-3">INTERNATIONAL KNIFE & SOCCER 2087</h1>
+        <h1 class="mt-5 mb-3">STRONG & KIND FOOTBALL MANAGER</h1>
         <div class="row">
             <div class="col-sm-6">
                 <h1>Partita: </h1>
                 <table class="table">
                     <thead>
                         <tr>
-                            <th><strong>PESCARA VECCHIA</strong></th>
+                            <th><strong>PECCHIORA</strong></th>
                             <th id="Goal1">0</th>
-                            <th><strong>TEATE FC</strong></th>
+                            <th><strong>VRANCALERRI</strong></th>
                             <th id="Goal2">0</th>
                         </tr>
                     </thead>
                     <tbody id="tabella">
                         <tr>
-                            <td id="1">Ciacone</td>
+                            <td id="1">Castolo</td>
                             <td id="s1"></td>
-                            <td id="2">Valignani</td>
+                            <td id="2">Baroja</td>
                             <td id="s2"></td>
                         </tr>
                         <tr>
-                            <td id="3">Kjiel XIII</td>
+                            <td id="3">Ximelez</td>
                             <td id="s3"></td>
-                            <td id="4">Chiarini il mai domo</td>
+                            <td id="4">Minanda</td>
                             <td id="s4"></td>
                         </tr>
                         <tr>
-                            <td id="5">Muskyo</td>
+                            <td id="5">Espimas</td>
                             <td id="s5"></td>
-                            <td id="6">Angelini Curva Volpi</td>
+                            <td id="6">Iouga</td>
                             <td id="s5"></td>
                         </tr>
                         <tr>
-                            <td id="7">Sergio detto il Porco</td>
+                            <td id="7">Hitzfeld</td>
                             <td id="s7"></td>
-                            <td id="8">Marcello il Paninaro</td>
+                            <td id="8">Cellini</td>
                             <td id="s8"></td>
                         </tr>
                         <tr>
-                            <td id="P1">Nicola L. Conti</td>
+                            <td id="P1">Ivarov</td>
                             <td></td>
-                            <td id="P2">Herio il Marrucino</td>
+                            <td id="P2">Uranga</td>
                             <td></td>
                         </tr>
                     </tbody>
@@ -292,7 +292,7 @@
                                     }
                                     var g1 = document.getElementById(gr1).innerHTML;
                                     var g2 = document.getElementById(gr2).innerHTML;
-                                    telecronaca.innerHTML ='<b>' + g1 + '</b> incita la folla mentre <b>' + g2 + '</b> lo prende deride';
+                                    telecronaca.innerHTML ='<b>' + g1 + '</b> incita la folla mentre <b>' + g2 + '</b> lo guarda con disappunto';
                                     break;
                                 case 10:
                                     var gr1 = Math.trunc(giocatori * Math.random());
@@ -410,10 +410,10 @@
 
                             } else {
                                 if (goal1 > goal2) {
-                                    telecronaca.innerHTML = 'Partita Terminata, vince <b>PESCARA VECCHIA</B> con ben ' + goal1 + ' reti a ' + goal2;
+                                    telecronaca.innerHTML = 'Partita Terminata, vince <b>PECCHIORA</b> con ben ' + goal1 + ' reti a ' + goal2;
                                 } else if (goal2 > goal1) {
-                                    telecronaca.innerHTML = 'Partita Terminata, vince <b>MAI DOMI KIETI</B> con ben ' + goal2 + ' reti a ' + goal1;
-                                } else { telecronaca.innerHTML = 'Partita Terminata, pareggio tra <b>PESCARA VECCHIA</b> e <b>MAI DOMI KIETI</b>'; }
+                                    telecronaca.innerHTML = 'Partita Terminata, vince <b>VRANCALERRI</b> con ben ' + goal2 + ' reti a ' + goal1;
+                                } else { telecronaca.innerHTML = 'Partita Terminata, pareggio tra <b>PECCHIORA</b> e <b>VRANCALERRI</b>'; }
 
                                 
                             }
