--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <div class="col-sm-6">
                <img src="img/soccer2.png" class="img-fluid" alt="Responsive image"/> 
-               <p>Fatti, nomi, cose o coltellate sono puramente casuali.</p>
+               <p><a href="https://www.hellfireabruzzo.it">www.hellfireabruzzo.it</a></p>
             </div>
         </div>
                 <script>
