--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                                     }
                                     var g1 = document.getElementById(gr1).innerHTML;
                                     var g2 = document.getElementById(gr2).innerHTML;
-                                    telecronaca.innerHTML = '<b>' + g2 + '</b> in evidente difficoltà viene buttato giù da <b>' + g1 + '</b> senza troppi complimenti';
+                                    telecronaca.innerHTML = '<b>' + g2 + '</b> cerca di divincolarsi ma <b>' + g1 + '</b> gli ruba la spazzandola via';
                                     break;
                                 case 12:
                                     var gr1 = Math.trunc(giocatori * Math.random());
