--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    
+                    <p>Crea le tue partite di Calcio da Strada [REGOLAMENTO]</p>
                     <button type="button" class="btn btn-primary" onclick="inserisci()">Inserisci dati</button>
                 </form>
                 </div>
@@ -147,6 +147,7 @@
                 </table>
                 
                 <div>
+                    <img src="img/soccer.jpg" class="img-fluid" alt="Responsive image"/> 
                     <p>MINUTO: <strong id="counter"></strong></p>
                     <hr />
                     <p id="telecronaca">
