--- a/index.html
+++ b/index.html
@@ -21,64 +21,64 @@
                     <table class="table">
                         <thead>
                             <tr>
-                                <th><input type="text" placeholder="squadra 1"  id="s1" name="s1" required></th>
+                                <th><input type="text" value="Real Cerratina"  id="s1" name="s1" required></th>
                                 <th></th>
                                 <th></th>
-                                <th><input type="text" placeholder="squadra 2" id="s2" name="s2" required></th>
+                                <th><input type="text" value="Vacri United" id="s2" name="s2" required></th>
                                 <th></th>
                                 <th></th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td><input type="text" placeholder="Nome Giocatore" id="att1" name="att1" required></td>
+                                <td><input type="text" value="Mario Squadrelli" id="att1" name="att1" required></td>
                                 <td>ATT</td>
                                 <td></td>
-                                <td><input type="text" placeholder="Nome Giocatore" id="att2" name="att2" required></td>
-                                <td>ATT</td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td><input type="text" placeholder="Nome Giocatore" id="att3" name="att3" required></td>
-                                <td>ATT</td>
-                                <td></td>
-                                <td><input type="text" placeholder="Nome Giocatore" id="att4" name="att4" required></td>
+                                <td><input type="text" value="Gino Tastaferro" id="att2" name="att2" required></td>
                                 <td>ATT</td>
                                 <td></td>
                             </tr>
                             <tr>
-                                <td><input type="text" placeholder="Nome Giocatore" id="dif1" name="dif1" required></td>
+                                <td><input type="text" value="Toni Tarello " id="att3" name="att3" required></td>
+                                <td>ATT</td>
+                                <td></td>
+                                <td><input type="text" value="Sergio Gorbelloni" id="att4" name="att4" required></td>
+                                <td>ATT</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td><input type="text" value="Nicolino Supino" id="dif1" name="dif1" required></td>
                                 <td>DIF</td>
                                 <td></td>
-                                <td><input type="text" placeholder="Nome Giocatore" id="dif2" name="dif2" required></td>
+                                <td><input type="text" placeholder="Dario Armadio" id="dif2" name="dif2" required></td>
                                 <td>DIF</td>
                                 <td></td>
                             </tr>
                             <tr>
-                                <td><input type="text" placeholder="Nome Giocatore" id="dif3" name="dif3" required></td>
+                                <td><input type="text" placeholder="Guerino Falciacosce" id="dif3" name="dif3" required></td>
                                 <td>DIF</td>
                                 <td></td>
-                                <td><input type="text" placeholder="Nome Giocatore" id="dif4" name="dif4" required></td>
+                                <td><input type="text" placeholder="Silvio Calatrebbia" id="dif4" name="dif4" required></td>
                                 <td>DIF</td>
                                 <td></td>
                             </tr>
                             <tr>
-                                <td><input type="text" placeholder="Nome Giocatore" id="por1" name="por1" required></td>
+                                <td><input type="text" placeholder="Giannino Tredita" id="por1" name="por1" required></td>
                                 <td>POR</td>
                                 <td></td>
-                                <td><input type="text" placeholder="Nome Giocatore" id="por2" name="por2" required></td>
+                                <td><input type="text" placeholder="Pierdomenico Quattrocchi" id="por2" name="por2" required></td>
                                 <td>POR</td>
                                 <td></td>
                             </tr>
                         </tbody>
                     </table>
-                    <p>Crea le tue partite di Calcio da Strada [REGOLAMENTO]</p>
+                    <p>Crea la tua squadra e simula le partite durante le tue sessioni di <strong>Strong & Kind</strong></p>
                     <button type="button" class="btn btn-primary" onclick="inserisci()">Inserisci dati</button>
                 </form>
                 </div>
                 <div class="col-sm-6">
                    <img src="img/soccer2.png" class="img-fluid" alt="Responsive image"/> 
-                   <p><a href="https://www.hellfireabruzzo.it">www.hellfireabruzzo.it</a></p>
+                   <p>Scarica il Manuale di Gioco su <a href="https://www.hellfireabruzzo.it" target="_blank">www.hellfireabruzzo.it</a></p>
                 </div>
             </div>
         </div>
