--- a/index.html
+++ b/index.html
@@ -50,23 +50,23 @@
                                 <td><input type="text" value="Nicolino Supino" id="dif1" name="dif1" required></td>
                                 <td>DIF</td>
                                 <td></td>
-                                <td><input type="text" placeholder="Dario Armadio" id="dif2" name="dif2" required></td>
+                                <td><input type="text" value="Dario Armadio" id="dif2" name="dif2" required></td>
                                 <td>DIF</td>
                                 <td></td>
                             </tr>
                             <tr>
-                                <td><input type="text" placeholder="Guerino Falciacosce" id="dif3" name="dif3" required></td>
+                                <td><input type="text" value="Guerino Falciacosce" id="dif3" name="dif3" required></td>
                                 <td>DIF</td>
                                 <td></td>
-                                <td><input type="text" placeholder="Silvio Calatrebbia" id="dif4" name="dif4" required></td>
+                                <td><input type="text" value="Silvio Calatrebbia" id="dif4" name="dif4" required></td>
                                 <td>DIF</td>
                                 <td></td>
                             </tr>
                             <tr>
-                                <td><input type="text" placeholder="Giannino Tredita" id="por1" name="por1" required></td>
+                                <td><input type="text" value="Giannino Tredita" id="por1" name="por1" required></td>
                                 <td>POR</td>
                                 <td></td>
-                                <td><input type="text" placeholder="Pierdomenico Quattrocchi" id="por2" name="por2" required></td>
+                                <td><input type="text" value="Pierdomenico Quattrocchi" id="por2" name="por2" required></td>
                                 <td>POR</td>
                                 <td></td>
                             </tr>
